syntax = "proto3";

package social.v1;

service TimelineService {
  rpc ListCastPosts(ListCastPostsRequest) returns (ListCastPostsResponse);
  rpc GetCastPost(GetCastPostRequest) returns (GetCastPostResponse);
  rpc SaveCastPost(SaveCastPostRequest) returns (SaveCastPostResponse);
  rpc DeleteCastPost(DeleteCastPostRequest) returns (DeleteCastPostResponse);

  // Like RPCs
  rpc LikeCastPost(LikeCastPostRequest) returns (LikeCastPostResponse);
  rpc UnlikeCastPost(UnlikeCastPostRequest) returns (UnlikeCastPostResponse);
  rpc GetPostLikeStatus(GetPostLikeStatusRequest) returns (GetPostLikeStatusResponse);

  // Follow RPCs
  rpc FollowCast(FollowCastRequest) returns (FollowCastResponse);
  rpc UnfollowCast(UnfollowCastRequest) returns (UnfollowCastResponse);
  rpc ListFollowing(ListFollowingRequest) returns (ListFollowingResponse);
  rpc GetFollowStatus(GetFollowStatusRequest) returns (GetFollowStatusResponse);
  rpc CancelFollowRequest(CancelFollowRequestRequest) returns (CancelFollowRequestResponse);

  // Follow Approval RPCs (for private casts)
  rpc ApproveFollow(ApproveFollowRequest) returns (ApproveFollowResponse);
  rpc RejectFollow(RejectFollowRequest) returns (RejectFollowResponse);
  rpc ListPendingFollowRequests(ListPendingFollowRequestsRequest) returns (ListPendingFollowRequestsResponse);
  rpc GetPendingFollowCount(GetPendingFollowCountRequest) returns (GetPendingFollowCountResponse);

  // Comment RPCs
  rpc AddComment(AddCommentRequest) returns (AddCommentResponse);
  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse);
  rpc ListComments(ListCommentsRequest) returns (ListCommentsResponse);
  rpc ListReplies(ListRepliesRequest) returns (ListRepliesResponse);

  // Block RPCs
  rpc BlockUser(BlockUserRequest) returns (BlockUserResponse);
  rpc UnblockUser(UnblockUserRequest) returns (UnblockUserResponse);
  rpc ListBlocked(ListBlockedRequest) returns (ListBlockedResponse);
  rpc GetBlockStatus(GetBlockStatusRequest) returns (GetBlockStatusResponse);

  // Favorite RPCs
  rpc AddFavorite(AddFavoriteRequest) returns (AddFavoriteResponse);
  rpc RemoveFavorite(RemoveFavoriteRequest) returns (RemoveFavoriteResponse);
  rpc ListFavorites(ListFavoritesRequest) returns (ListFavoritesResponse);
  rpc GetFavoriteStatus(GetFavoriteStatusRequest) returns (GetFavoriteStatusResponse);
}

message CastPostAuthor {
  string id = 1;
  string name = 2;
  string image_url = 3;
}

message CastPostMedia {
  string id = 1;
  string media_type = 2; // "image" or "video"
  string url = 3;
  string thumbnail_url = 4;
}

message CastPost {
  string id = 1;
  string cast_id = 2;
  string content = 3;
  repeated CastPostMedia media = 4;
  string created_at = 5; // ISO8601
  CastPostAuthor author = 6;
  int32 likes_count = 7;
  int32 comments_count = 8;
  bool visible = 9;
  repeated string hashtags = 10;
  bool liked = 11; // whether current user liked this post
}

message ListCastPostsRequest {
  int32 limit = 1;   // default: 20, max: 50
  string cursor = 2; // optional, base64 encoded
  string cast_id = 3; // optional, filter by cast
  string filter = 4; // optional, "following" or "favorites" to filter posts
}

message ListCastPostsResponse {
  repeated CastPost posts = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

message SaveCastPostRequest {
  string id = 1; // empty for create, set for update
  string content = 2;
  repeated CastPostMedia media = 3;
  bool visible = 4;
  repeated string hashtags = 5;
}

message SaveCastPostResponse {
  CastPost post = 1;
}

message GetCastPostRequest {
  string id = 1;
}

message GetCastPostResponse {
  CastPost post = 1;
}

message DeleteCastPostRequest {
  string id = 1;
}

message DeleteCastPostResponse {}

// Like Messages
message LikeCastPostRequest {
  string post_id = 1;
}

message LikeCastPostResponse {
  int32 likes_count = 1;
}

message UnlikeCastPostRequest {
  string post_id = 1;
}

message UnlikeCastPostResponse {
  int32 likes_count = 1;
}

message GetPostLikeStatusRequest {
  repeated string post_ids = 1;
}

message GetPostLikeStatusResponse {
  map<string, bool> liked = 1; // post_id -> is_liked
}

// Follow Status Enum
enum FollowStatus {
  FOLLOW_STATUS_UNSPECIFIED = 0;
  FOLLOW_STATUS_NONE = 1;      // Not following
  FOLLOW_STATUS_PENDING = 2;   // Follow request pending approval
  FOLLOW_STATUS_APPROVED = 3;  // Following
}

// Follow Messages
message FollowCastRequest {
  string cast_id = 1;
}

message FollowCastResponse {
  bool success = 1;
  FollowStatus status = 2; // Resulting follow status
}

message UnfollowCastRequest {
  string cast_id = 1;
}

message UnfollowCastResponse {
  bool success = 1;
}

message ListFollowingRequest {
  int32 limit = 1;
  string cursor = 2;
}

message ListFollowingResponse {
  repeated string cast_ids = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

message GetFollowStatusRequest {
  repeated string cast_ids = 1;
}

message GetFollowStatusResponse {
  map<string, FollowStatus> statuses = 1; // cast_id -> follow status
}

// Cancel Follow Request (for guests to cancel pending requests)
message CancelFollowRequestRequest {
  string cast_id = 1;
}

message CancelFollowRequestResponse {
  bool success = 1;
}

// Follow Approval Messages (for private cast owners)
message ApproveFollowRequest {
  string guest_id = 1;
}

message ApproveFollowResponse {
  bool success = 1;
}

message RejectFollowRequest {
  string guest_id = 1;
}

message RejectFollowResponse {
  bool success = 1;
}

message FollowRequestItem {
  string guest_id = 1;
  string guest_name = 2;
  string guest_image_url = 3;
  string requested_at = 4; // ISO8601
}

message ListPendingFollowRequestsRequest {
  int32 limit = 1;   // default: 20
  string cursor = 2; // optional
}

message ListPendingFollowRequestsResponse {
  repeated FollowRequestItem requests = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

message GetPendingFollowCountRequest {}

message GetPendingFollowCountResponse {
  int32 count = 1;
}

// Comment Messages
message CommentMedia {
  string id = 1;
  string media_type = 2; // "image" or "video"
  string url = 3;
  string thumbnail_url = 4;
}

message CommentAuthor {
  string id = 1;
  string name = 2;
  string image_url = 3;
  string user_type = 4; // "guest" or "cast"
}

message Comment {
  string id = 1;
  string post_id = 2;
  string parent_id = 3; // empty if top-level comment
  string user_id = 4;   // Guest or Cast user ID
  string content = 5;
  string created_at = 6; // ISO8601
  CommentAuthor author = 7;
  repeated CommentMedia media = 8;
  int32 replies_count = 9;
}

message AddCommentRequest {
  string post_id = 1;
  string content = 2;
  string parent_id = 3; // optional, for replies
  repeated CommentMedia media = 4; // max 3
}

message AddCommentResponse {
  Comment comment = 1;
  int32 comments_count = 2; // updated post comments count
}

message DeleteCommentRequest {
  string comment_id = 1;
}

message DeleteCommentResponse {
  int32 comments_count = 1;
}

message ListCommentsRequest {
  string post_id = 1;
  int32 limit = 2;   // default: 20, max: 50
  string cursor = 3; // optional, for pagination
}

message ListCommentsResponse {
  repeated Comment comments = 1; // top-level comments only
  string next_cursor = 2;
  bool has_more = 3;
}

message ListRepliesRequest {
  string comment_id = 1; // parent comment id
  int32 limit = 2;   // default: 20, max: 50
  string cursor = 3; // optional, for pagination
}

message ListRepliesResponse {
  repeated Comment replies = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

// Block Messages
message BlockedUser {
  string id = 1;
  string user_type = 2; // "guest" or "cast"
  string name = 3;
  string image_url = 4;
  string blocked_at = 5; // ISO8601
}

message BlockUserRequest {
  string blocked_id = 1;
  string blocked_type = 2; // "guest" or "cast"
}

message BlockUserResponse {
  bool success = 1;
}

message UnblockUserRequest {
  string blocked_id = 1;
}

message UnblockUserResponse {
  bool success = 1;
}

message ListBlockedRequest {
  int32 limit = 1;   // default: 50, max: 100
  string cursor = 2; // optional, for pagination
}

message ListBlockedResponse {
  repeated BlockedUser users = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

message GetBlockStatusRequest {
  repeated string user_ids = 1;
}

message GetBlockStatusResponse {
  map<string, bool> blocked = 1; // user_id -> is_blocked
}

// Favorite Messages
message AddFavoriteRequest {
  string cast_id = 1;
}

message AddFavoriteResponse {
  bool success = 1;
}

message RemoveFavoriteRequest {
  string cast_id = 1;
}

message RemoveFavoriteResponse {
  bool success = 1;
}

message ListFavoritesRequest {
  int32 limit = 1;   // default: 100, max: 200
  string cursor = 2; // optional, for pagination
}

message ListFavoritesResponse {
  repeated string cast_ids = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

message GetFavoriteStatusRequest {
  repeated string cast_ids = 1;
}

message GetFavoriteStatusResponse {
  map<string, bool> favorited = 1; // cast_id -> is_favorited
}
